--- a/gl.cabal
+++ b/gl.cabal
@@ -1,7 +1,7 @@
 name:          gl
 version:       0.8.0
 synopsis:      Complete OpenGL raw bindings
-description:   Complete OpenGL raw bindings
+description:   Complete OpenGL raw bindings.
 license:       BSD3
 license-file:  LICENSE
 author:        Edward A. Kmett, Gabríel Arthúr Pétursson, Sven Panne
@@ -12,6 +12,12 @@ copyright:     Copyright © 2014-2017 Edward A. Kmett,
 category:      Graphics
 build-type:    Custom
 cabal-version: >=1.24
+tested-with:   GHC == 7.8.4
+             , GHC == 7.10.3
+             , GHC == 8.0.2
+             , GHC == 8.2.2
+             , GHC == 8.4.3
+             , GHC == 8.6.1
 extra-source-files:
   gl.xml man.txt extensions.txt
   CHANGELOG.markdown README.markdown TODO.markdown
